app/assets/styles/_post.scss
.post-foot {
  width: 100%;
  text-align: center;
  margin-top: 6rem;
}

.post-hed {
  margin-bottom: 0.15rem;
}

.post-date {
  font-style: italic;
  font-size: 18px;
  opacity: 0.4;
}

.article-container {
  position: relative;
  display: table;
  margin: 0 auto;
  padding: 6rem 2rem 10rem;
  max-width: 1000px;
  width: 100%;
  @include media-query($laptop) {
    margin: 0 0 2rem;
    padding: 6rem 0 10rem;
  }
  @include media-query($mobile) {
    padding-top: 2rem;
  }
}

.article-gutter {
  float: left;
  width: 40%;
}

.article-content {
  float: right;
  width: 55%;
  ul {
    padding: 0;
    margin: 2rem 1rem 3rem;
    li {
      position: relative;
      margin: 1rem 0 0 2rem;
      &:before {
        position: absolute;
        content: "\EA0A";
        top: 12px;
        left: -20px;
        font-size: 7px;
        @extend %collecticons;
      }
    }
  }
  @include media-query($mobile) {
    width: auto;
    float: initial;
    margin: 0 2rem;
  }
}

.article-back {
  font-style: italic;
  opacity: 0.6;
}

.article-title {
  margin-bottom: 0.5rem;
  font-size: 3rem;
  line-height: 4rem;
  font-weight: 800;
  text-shadow: 1px 2px 6px black;
}

.article-header {
  margin-bottom: 6rem;
}

.article-foot{
  padding: 4rem 0 0 0;
  font-size: 16px;
  margin: 0 auto;
  text-align: center;
  i{
    font-size: 6rem;
    text-align:center;
    display: block;
  }
}

.post-image {
  position: absolute;
  max-width: 40%;
  left: 0;
  img {
    max-width: 90%;
  }
  &__first {
    margin-top: -8rem;
    z-index: -1;
  }
  @include media-query($mobile) {
    position: relative;
    max-width: 100%;
    text-align: center;
    margin-bottom: 4rem;
  }
}

.post-image__full {
  position: relative;
  max-width: 100%;
  text-align: center;
  margin-top: -10rem;
  img { 
    max-width: 1200px;
    @include media-query(1200px) {
      max-width: 100%;
    }
  }
}

.full-img-placeholder {
  height: 800px;
  @include media-query($laptop) {
    height: 600px;
  }
  @include media-query($mobile) {
    height: 400px;
  }
}

.inline-img {
  position: relative;
  max-width: 100%;
  margin-bottom: 2.5rem;
  img {
    max-width: 100%; 
  }
}

.inline-img__small {
  position: relative;
  max-width: 100%;
  margin-bottom: 2rem;
  img {
    max-width: 70%;
    margin: 0 15%;
    @include media-query($laptop) {
      max-width: 100%;
      margin: 0;
    }
  }
}

.grey-border {
  img { border: 1px solid #bbb; }
}

.black-border {
  img { border: 1px solid black; }
}

.notes {
  margin-top: 6rem;
  padding: 2rem 0;
  border-top: 1px solid $Primary;
  border-bottom: 1px solid $Primary;
  font-size: 17px;
  line-height: 24px;
}

aside {
  background-color: lighten($Primary, 30);
  margin: 2rem 0;
  padding: 1.5rem;
  font-size: 17px;
  line-height: 24px;
}

code {
  background: rgba(255,255,255,0.65);
  border-radius: 10px;
  padding: 0.5rem 0.85rem;
  margin: 2.5rem 0 0.5rem;
  font-size: 13px;
}

pre {
  // background: rgba(0,0,0,0.1);
  border-radius: 10px;
  padding: 0.5rem 0.85rem;
  margin: 2rem 0;
  font-size: 13px;
  overflow: scroll
}

pre code {
  background: initial;
  border-radius: 0;
  padding: 0;
  margin: 0;
}

.code-block {
  position: relative;
  width: 100%;
  display: block;
  white-space: pre-wrap;
  &:before {
    position: absolute;
    top: -1.75rem;
    left: 0rem;
    content: "code";
    opacity: 0.35;
  }
}

.code-def {
  display: inline-block;
  font-weight: 300;
  font-family: 'Proza Libre';
  text-transform: uppercase;
  font-size: 14px;
  color: $Primary;
  margin-bottom: 1rem;
}

.code-def-intro {
  display: inline-block;
  font-size: 17px;
  opacity: 0.45;
}

.gold-text {
  color: $golden;
}

